# jam-quiz

./: .ghci  .gitignore  README.md  TODO.org  haskell.cabal  main.py  quiz-number-language.py  quiz_number_language.py  random-metronomic-instructions.py  routine.hs  shell.nix
README/: using-the-arithmetic-quizzer.md
haskell/: Changes.hs  EdoMath.hs  Edo_NoScale.hs  Formulas.hs  IntervalScores.hs  Modes.hs  NamedScaleFamilies.hs  NamedScalesAndFamilies.hs  Quiz.hs  Quiz_58.hs  Stats.hs  Tests.hs  Util.hs  interesting.org  libs.hs
haskell/Formulas/: Data.hs
python/: add_and_subtract.py  dictator.py  it.py  might-use.py  pitch.py  random_metronomic_instructions.py  swing.py  swing_multiproc_complex_fail.py  swing_multiproc_simple_fail.py  util.py
results/: 41-edo-results.md  41-edo.all-scales.md
