cabal-version:  3.8
name:           haskell
version:        0.1.0.0
description:    Please see the README on Github at <https://github.com/githubuser/haskell#readme>
homepage:       https://github.com/githubuser/haskell#readme
bug-reports:    https://github.com/githubuser/haskell/issues
author:         Author name here
maintainer:     example@example.com
copyright:      2018 Author name here
license:        GPL-3.0-or-later
-- license-file:
build-type:     Simple

extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/githubuser/haskell

library
  hs-source-dirs:
      haskell
  build-depends:
                base >=4.7 && <5
              , containers
              , HUnit
              , mtl
              , random
  exposed-modules:
      Edo_NoScale,
      Formulas,
      Formulas.Data,
      IntervalScores,
      Modes,
      NamedScalesAndFamilies,
      Quiz,
      Quiz_58,
      Stats,
      Tests,
      Util
  other-modules:
      Paths_haskell
  default-language: GHC2021
